# rekruto-hello

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
rekruto/: urls.py  views.py
